Fix syntax highlighting issues and add dark mode for syntax highlighting

--- a/_sass/app.scss
+++ b/_sass/app.scss
@@ -22,12 +22,18 @@ $background-color:           #fdfdfd !default;
 $brand-color:                #10bcf9 !default;
 $divider-color:              $grey-color-light !default;
 $meta-color:                 lighten($text-color, 15%);
+$code-background-color:      #eef;
+$code-text-color:            $text-color;
+$code-divider-color:         $divider-color;
 
 $dark-mode-heading-color:    #ebe9f1 !default;
 $dark-mode-text-color:       #bbbbbf !default;//#cccccc !default;
 $dark-mode-background-color: #1e1e21 !default;
 $dark-mode-divider-color:    #2b2b2b !default;//#222225 !default;
-$dark-mode-meta-color:       darken($dark-mode-text-color, 15%);
+$dark-mode-meta-color:       darken($dark-mode-text-color, 15%) !default;
+$dark-mode-code-background-color: lighten($dark-mode-background-color, 2%) !default;
+$dark-mode-code-color:       #c5c8c6 !default;
+$dark-mode-code-divider-color: $dark-mode-divider-color !default;
 
 $table-text-align:           left !default;
 
